errors_v3.txt
jazzzfm@jazzzfm [00:13:09] [~/Documents/JazzDataSolutions/SaptivaTekChallenge] [main *]
-> % # sandbox escribible para DB/índices
export TEST_TMP_DIR="$(mktemp -d)"

# linter con nueva config
ruff check . --fix

# type-check
mypy . --python-version=3.11

# pruebas
pytest -q

F811 Redefinition of unused `TrustedHostMiddleware` from line 9
  --> api/main.py:9:44
   |
 8 | from fastapi import Depends, FastAPI, HTTPException, Query, Request
 9 | from fastapi.middleware.trustedhost import TrustedHostMiddleware
   |                                            --------------------- previous definition of `TrustedHostMiddleware` here
10 | from fastapi.responses import JSONResponse
11 | from pydantic import BaseModel, Field, field_validator
12 | from starlette.middleware.cors import CORSMiddleware
13 | from starlette.middleware.trustedhost import TrustedHostMiddleware
   |                                              ^^^^^^^^^^^^^^^^^^^^^ `TrustedHostMiddleware` redefined here
14 |
15 | from core.container import cleanup_container, get_container
   |
help: Remove definition: `TrustedHostMiddleware`

F821 Undefined name `Settings`
  --> api/main.py:44:12
   |
44 | settings = Settings()
   |            ^^^^^^^^
45 | _ensure_sqlite_dir(settings.database_url)
   |

F811 Redefinition of unused `get_create_prompt_use_case` from line 35
   --> api/main.py:112:5
    |
111 | # Dependencies using DI container
112 | def get_create_prompt_use_case() -> CreatePrompt:
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ `get_create_prompt_use_case` redefined here
113 |     container = get_container()
114 |     return container.create_prompt_use_case
    |
   ::: api/main.py:35:5
    |
 33 |         p.parent.mkdir(parents=True, exist_ok=True)
 34 |
 35 | def get_create_prompt_use_case() -> CreatePrompt:
    |     -------------------------- previous definition of `get_create_prompt_use_case` here
 36 |     container = get_container()
 37 |     return container.create_prompt_use_case
    |
help: Remove definition: `get_create_prompt_use_case`

F811 Redefinition of unused `get_search_similar_use_case` from line 39
   --> api/main.py:116:5
    |
114 |     return container.create_prompt_use_case
115 |
116 | def get_search_similar_use_case() -> SearchSimilar:
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `get_search_similar_use_case` redefined here
117 |     container = get_container()
118 |     return container.search_similar_use_case
    |
   ::: api/main.py:39:5
    |
 37 |     return container.create_prompt_use_case
 38 |
 39 | def get_search_similar_use_case() -> SearchSimilar:
    |     --------------------------- previous definition of `get_search_similar_use_case` here
 40 |     container = get_container()
 41 |     return container.search_similar_use_case
    |
help: Remove definition: `get_search_similar_use_case`

F821 Undefined name `e`
   --> api/main.py:308:77
    |
307 |         if not overall_healthy:
308 |             raise HTTPException(status_code=503, detail=health_status) from e
    |                                                                             ^
309 |         
310 |         return health_status
    |

B007 Loop control variable `score` not used within loop body
  --> use_cases/search_similar.py:58:21
   |
56 |             failed_lookups = 0
57 |             
58 |             for id, score in similar_ids:
   |                     ^^^^^
59 |                 try:
60 |                     record = self.prompt_repo.find_by_id(id)
   |
help: Rename unused `score` to `_score`

Found 6 errors.
No fixes available (1 hidden fix can be enabled with the `--unsafe-fixes` option).
infra/chroma_index.py:29: error: Argument "metadatas" to "add" of "Collection" has incompatible type "list[dict[Any, Any]]"; expected "Mapping[str, str | int | float | bool | None] | list[Mapping[str, str | int | float | bool | None]] | None"  [arg-type]
core/container.py:156: error: Name "_container" already defined on line 16  [no-redef]
api/main.py:44: error: Name "Settings" is not defined  [name-defined]
api/main.py:112: error: Name "get_create_prompt_use_case" already defined on line 35  [no-redef]
api/main.py:116: error: Name "get_search_similar_use_case" already defined on line 39  [no-redef]
Found 5 errors in 3 files (checked 38 source files)
ImportError while loading conftest '/home/jazzzfm/Documents/JazzDataSolutions/SaptivaTekChallenge/tests/conftest.py'.
tests/conftest.py:7: in <module>
    from api.main import app
api/main.py:15: in <module>
    from core.container import cleanup_container, get_container
core/container.py:6: in <module>
    from core.config import settings
E   ModuleNotFoundError: No module named 'core.config'
(.venv) 

